--- a/package.json
+++ b/package.json
@@ -2,26 +2,32 @@
   "name": "smoking",
   "version": "0.1.0",
   "private": true,
+  "hompage": "https://pichao.github.io/smoking",
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.1",
-    "react-router-dom": "^7.5.1",
+    "react-router": "^7.5.2",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.87.0",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
-  "homepage": "https://pichao.github.io/smoking/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env PUBLIC_URL=/smoking/ react-scripts start",
+    "build": "cross-env PUBLIC_URL=/smoking/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "customize-cra-5": "^5.0.0",
+    "postcss-plugin-px2rem": "^0.8.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
