--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "clipboard": "^2.0.11",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
@@ -48,6 +49,7 @@
     "prompts": "^2.4.2",
     "react": "^19.1.0",
     "react-app-polyfill": "^3.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^19.1.0",
     "react-refresh": "^0.11.0",
@@ -95,6 +97,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "customize-cra-5": "^5.0.0",
     "lib-flexible": "^0.3.2",
     "postcss-plugin-px2rem": "^0.8.1",
